	* All new preferences dialog (best used in gtk2)
	* Moved "privacy preferences" to Tools menu
	* Now using libiconv for better i18n support (Thanks Junichi 
	  Uekawa)
	* Optionally uniquely colorize nicks in chats
	* Changed some default options
	* Updated desktop icon.
	* GTK2 Goodness:
		- Preferences dialog
		- Plugins dialog (Ari Pollak)
		- GtkIMHtml, sorta (Ari Pollak, Christian Hammond)
	* Notify.c plugin rewritten; check its configure dialog (Thanks,
	  Etan Reisner)

version 0.59 (06/24/2002):
	* Hungarian translation added (Thanks, Sutto Zoltan)
	* Swedish translation updated (Thanks, Christian Rose)
	* Spanish translation updated (Thanks, Alex)
	* Traditional Chinese translation updated (Thanks, Paladin Liu)
	* Czech translation added (Thanks, Honza)
	* Polish translation updated (Thanks Przemyslaw Sulek)
	* Squashed a bug in buddy right-click menu handling
	  that crashed Gaim.  In the process: found and
	  eliminated some memory leaks.
	* Fixed a significant applet leak
	* Can now change Jabber password on server (Thanks,
	  Nathan Walp)
	* Certain types of Jabber presence errors no longer
	  falsely show a buddy on-line.  Instead now a "broken
	  light-bulb" icon is shown and the error status is
	  available via "Get Away Msg"  (Thanks and a tip o'
	  the hat to Christian Hammond for the graphic)
	* Conversation struct has pointer to toolbar (thanks Brent
	  Priddy and Paul Miller)
	* Zephyr fixes (thanks, Arun A. Tharuvai)
	* Aliases in buddy ticker
	* Perl scripts can play Gaim sounds (thanks Andrew Rodland)
	* Internal sounds can be played by commands (thanks Lex Spoon)
	* Auto-login item in applet menu (thanks Chris Boyle)
	* Fixed MSN "Unkown Error Code", "Already there", and 
	  "Already in opposite list" errors
	* Changed "Play sound" button to "Mute" button
	* You can now have "reserved" chars in IM and proxy passwords
	* Jabber now has typing notification  (Thanks, Nathan Walp)
	* Improved support for Jabber resources  (Thanks, Nathan Walp)